# good-great-excellent

./: good-great-excellent.cabal  questions.txt  readme.txt  stack.yaml  strong-weak-freq.txt  temp.txt
.stack-work/install/x86_64-osx/lts-6.11/7.10.3/lib/x86_64-osx-ghc-7.10.3/good-great-excellent-0.1.0.0-DmvfzrsRlTTEG4TgbQ9uXe/: Conduits.dyn_hi  Conduits.hi  Lib.dyn_hi  Lib.hi  Parsers.dyn_hi  Parsers.hi  PatternCompiler.dyn_hi  PatternCompiler.hi  Preprocess.dyn_hi  Preprocess.hi  libHSgood-great-excellent-0.1.0.0-DmvfzrsRlTTEG4TgbQ9uXe-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.11/7.10.3/pkgdb/: good-great-excellent-0.1.0.0-318a88e0038769753a94d4348892be73.conf  package.cache
app/: Main.hs  PulpTut.py  Scripts.hs  Subroutines.hs  WhiskasModel.lp  full problem formulation.lp  tutorial.lp
inputs/: readme.txt  strong-weak-patterns-large.txt  strong-weak-patterns.txt  weak-strong-patterns.txt  wordpairs.txt
lib/: Conduits.hs  Lib.hs  NormalizeText.hs  Parsers.hs  PatternCompiler.hs  PatternCompiler_old.hs  PlayHunt.hs  Preprocess.hs  Tokenize.hs  Utils.hs
milp/: PulpTut.py  milp-three-var.py  milp-two-var.py  milp.py  rank: {good,great}, E = {}.lp  readData.py  simple-ex.py  small-demo.py  testReadData.py  tutold.py
python/: exp1.py  exp2.py  good-bad.py  milp-three-var.py  milp.py  readData.py  score.py  small-demo.py  temp.hs  testReadData.py  testScore.py  untitled
python/tutorial/: milp-two-var.py
shell/: main.sh  try.sh
src/: Core.hs  PreprocessData.hs  Query.hs  Score.hs  ScrubData.hs  Src.hs
strong/: adjacent-adjacent.txt  adjacent-close.txt  adjacent-near.txt  adjacent-nearby.txt  black-black.txt  black-dark.txt  black-dim.txt  black-gloomy.txt  close-adjacent.txt  close-close.txt  close-intimate.txt  close-near.txt  close-nearby.txt  dark-black.txt  dark-dark.txt  dark-dim.txt  dark-gloomy.txt  dim-black.txt  dim-dark.txt  dim-dim.txt  dim-gloomy.txt  eighth-eighth.txt  eighth-fifth.txt  eighth-first.txt  eighth-fourth.txt  eighth-second.txt  eighth-seventh.txt  eighth-sixth.txt  eighth-third.txt  famous-famous.txt  famous-known.txt  famous-legendary.txt  fifth-eighth.txt  fifth-fifth.txt  fifth-first.txt  fifth-fourth.txt  fifth-second.txt  fifth-seventh.txt  fifth-sixth.txt  fifth-third.txt  (+91 more)
temp/: characteristic-characteristic.txt  characteristic-limited.txt  innocent-innocent.txt  innocent-simple.txt  simple-simple.txt
temp-strong/: awful-awful.txt  bad-bad.txt  boggy-boggy.txt  characteristic-characteristic.txt  childlike-childlike.txt  drippy-drippy.txt  dry-dry.txt  evil-evil.txt  humid-humid.txt  innocent-innocent.txt  limited-limited.txt  mediocre-mediocre.txt  moist-moist.txt  muddy-muddy.txt  naif-naif.txt  naive-naive.txt  negative-negative.txt  peculiar-peculiar.txt  poor-poor.txt  rainy-rainy.txt  simple-simple.txt  special-special.txt  sticky-sticky.txt  tacky-tacky.txt  terrible-terrible.txt  uncharacteristic-uncharacteristic.txt  unique-characteristic.txt  watery-watery.txt  wet-wet.txt  worse-worse.txt  worst-worst.txt
temp-weak/: awful-awful.txt  bad-bad.txt  boggy-boggy.txt  characteristic-characteristic.txt  childlike-childlike.txt  damp-damp.txt  drippy-drippy.txt  dry-dry.txt  evil-evil.txt  humid-humid.txt  innocent-childlike.txt  innocent-innocent.txt  innocent-naif.txt  innocent-naive.txt  innocent-simple.txt  limited-limited.txt  mediocre-mediocre.txt  moist-moist.txt  muddy-muddy.txt  naif-naif.txt  naive-naive.txt  negative-negative.txt  particular-particular.txt  peculiar-peculiar.txt  poor-poor.txt  rainy-rainy.txt  simple-innocent.txt  simple-naive.txt  simple-simple.txt  soggy-soggy.txt  special-special.txt  specific-specific.txt  steamy-steamy.txt  sticky-sticky.txt  tacky-tacky.txt  terrible-terrible.txt  uncharacteristic-uncharacteristic.txt  unique-unique.txt  waterlogged-waterlogged.txt  watery-watery.txt  (+3 more)
test/: NormalizeTextTest.hs  ParserInteractionTest.hs  ParserSimpleTest.hs  ParserTest.hs  PatternCompilerTest.hs  PreprocessTest.hs  RawPatternTest.hs  TokenizeTest.hs
test/assets/raw-strong-weak/: *-or-very-*.txt  not-*-although-still-*.txt  not-*-but-just-*.txt  not-*-but-still-*.txt  not-*-just-*.txt  not-*-still-*.txt  not-*-though-still-*.txt
weak/: adjacent-adjacent.txt  adjacent-close.txt  adjacent-near.txt  adjacent-nearby.txt  black-black.txt  black-dark.txt  black-dim.txt  black-gloomy.txt  close-adjacent.txt  close-close.txt  close-intimate.txt  close-near.txt  close-nearby.txt  dark-black.txt  dark-dark.txt  dark-dim.txt  dark-gloomy.txt  dim-black.txt  dim-dark.txt  dim-dim.txt  dim-gloomy.txt  eighth-eighth.txt  eighth-fifth.txt  eighth-first.txt  eighth-fourth.txt  eighth-second.txt  eighth-seventh.txt  eighth-sixth.txt  eighth-third.txt  famous-famous.txt  famous-known.txt  famous-legendary.txt  fifth-eighth.txt  fifth-fifth.txt  fifth-first.txt  fifth-fourth.txt  fifth-second.txt  fifth-seventh.txt  fifth-sixth.txt  fifth-third.txt  (+86 more)
words/: adjacent.txt  black.txt  close.txt  dark.txt  dim.txt  eighth.txt  famous.txt  fifth.txt  first.txt  fourth.txt  full.txt  gloomy.txt  good.txt  intimate.txt  known.txt  legendary.txt  near.txt  nearby.txt  second.txt  seventh.txt  sixth.txt  sufficient.txt  third.txt  wide.txt  words.txt
