name:                good-great-excellent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Xiao Ling
maintainer:          lingxiao@seas.upenn.edu
copyright:           2016 Xiao Ling
category:            Natural Language Processing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
  other-modules  :     Parsers
                    ,  Conduits
                    ,  Preprocess
                    ,  PatternCompiler
                    ,  Utils


  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , zlib
                     , text
                     , split
                     , conduit
                     , conduit-extra 
                     , conduit-combinators
                     , directory
                     , filepath
                     , resourcet
                     , transformers
                     , bytestring
                     , attoparsec
                     , HUnit
                     , time


  default-language:    Haskell2010

executable good-great-excellent-exe
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs

  other-modules  :    Core
                    , Src
                    , PreprocessData
                    , Query
                    , Subroutines


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , good-great-excellent
                     , text
                     , split
                     , conduit
                     , conduit-extra 
                     , conduit-combinators
                     , filepath
                     , bytestring
                     , directory
                     , attoparsec
                     , time

  default-language:    Haskell2010

test-suite good-great-excellent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , good-great-excellent
                     , ParserText
                     , PreprocessTest
                     , PatternCompilerTest
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/good-great-excellent
